tests/baselines/reference/iterableArrayPattern22.errors.txt
tests/cases/conformance/es6/destructuring/iterableArrayPattern22.ts(1,5): error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.


==== tests/cases/conformance/es6/destructuring/iterableArrayPattern22.ts (1 errors) ====
    var [...a] = { 0: "", 1: true };
        ~~~~~~
!!! error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.